# MinouChat

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  BASE_CLASS_ISSUE_EXPLAINED.md  CHARACTER_SYSTEM_DESIGN.md  CLAUDE.md  CURRENT_STATUS_REPORT.md  CreateMiaAILauncher.applescript  DEPLOYMENT_NOTES.md  Dockerfile  INSTALL.md  LICENSE  MIGRATION_PLAN.md  MiaAI_launcher.sh  PERSONA_REFACTOR_SUMMARY.md  PLAN_simplified_context.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  add_permanent_memories.py  alembic.ini  backup.sh  chat.js  check_ollama.sh  clear_users.py  config.html  config.js  cookies.txt  create_app.sh  create_app_direct.sh  create_simple_app.sh  debug_db.py  direct_search_fix.py  docker-compose.ollama.yml  docker-compose.override.yml.example  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  entrypoint.sh  (+43 more)
app/: __init__.py
app/api/: __init__.py  auth.py  characters.py  chat.py  documents.py  memories.py  models.py  output.py  root.py  settings.py
app/core/: auth.py  character.py  chat.py  config.py  document_processor.py  documents.py  output_window.py  personality.py  personalization.py  settings.py
app/llm/: adapter.py  model_adapter.py
app/memory/: __init__.py  enhanced_memory.py  sql.py  vector.py
app/static/: index.html
app/static/css/: style.css
app/static/files/: sample.txt
app/static/js/: app.js  chat.js  config.js  setup.js
app/templates/: base.html  dashboard.html  index.html  settings.html
app/templates/auth/: login.html  register.html
app/templates/personality/: edit.html  list.html
backup/: fix_clear_memory.py  fix_memory_search.py  llm_config.json  memories.db.bak.1742135741  miaai.py
character_cards/: 0eee63a4-11f4-47de-a0fd-8a10786ae412.json  22221df6-b8ec-424b-ab94-65fd75837baa.json  28a8dd4f-7bc6-46be-b4d5-1253adf75740.json  3106843b-ef5c-4a63-98aa-69f3bb1776a7.json  5eb9d08e-7c55-40d1-87d5-dd820598d426.json  792fa3fe-d257-4e99-96f3-99cd879d2027.json  7f737240-dfb8-4545-9886-a2b6a0e6c8b3.json  93358dfb-7fdf-4e5a-abfd-cdc364a1e650.json  96998652-b80b-4377-8da0-b44807d87a6f.json  a4012974-f619-404b-8837-f171856235e5.json  aaf05929-7c4a-4bc6-b273-a0032a143643.json  b964c2b1-3da2-42a4-914c-af417a501b8e.json  dd894755-140c-4683-a943-aa0984a7aa29.json  e7954557-4736-4e5e-8c6e-0ce0d8618dad.json
character_examples/: example-mia.json  example-sage.json
config/: config.py  llm_config.json
config/personalities/: mia.xml  personality.xsd
conversations/: character_versions.json  messages.json  sessions.json
data/: memories.db.bak.1742136168
docs/: CLERK_SETUP.md  DEV.md  README.md  authentication_system.md  conversation_versioning_solution.md  personality_framework.md
docs/architecture/: system-design.md
docs/implementation/: coach-improvements-plan.md  development-plan.md  phase1.md  roadmap.md
docs/tracking/: progress.md
documents/: 6201d634-40aa-4afe-9e0f-fb46b412b07a.docx  6201d634-40aa-4afe-9e0f-fb46b412b07a.json  LLM_Market_Analysis_OpenRouter_2025.md
migrations/: env.py
nginx/: minou.nauhauslabs.com.conf
output_documents/: 60e00f78-cb03-4a4c-a0e5-6889b4074a82.json
personalities/: Gordon.json  Mia.json  Sage.json
scripts/: test_personality.py
src/miachat/: __init__.py  cli.py
src/miachat/api/: main.py  run.py
src/miachat/api/core/: artifact_service.py  auth.py  avatar_service.py  backstory_service.py  character_initializer.py  character_manager.py  clerk_auth.py  conversation_manager.py  conversation_models.py  conversation_service.py  database.py  document_processor.py  document_service.py  embedding_service.py  enhanced_context_service.py  export_service.py  fact_extraction_service.py  feature_preferences_service.py  flash.py  google_auth_service.py  google_calendar_service.py  google_sync_service.py  google_tasks_service.py  life_area_service.py  llm_client.py  memory_service.py  model_discovery.py  models.py  persistent_memory_service.py  persona_manager.py  personality_manager.py  rag_service.py  reminder_service.py  setting_service.py  settings_service.py  setup_service.py  sidebar_extraction_service.py  static.py  style_overrides.py  templates.py  (+7 more)
src/miachat/api/data/: sample_persona.xml  sample_personality.xml
src/miachat/api/models/: chat.py  persona.py  personality.py
src/miachat/api/routes/: artifacts.py  auth.py  backstory.py  documents.py  export.py  facts.py  feature_preferences.py  google_auth.py  google_calendar.py  google_tasks.py  life_areas.py  memory.py  reminders.py  setting.py  setup.py  todos.py  tracking.py  web_search.py  world_info.py
src/miachat/api/schemas/: chat.py
src/miachat/api/templates/: artifacts.html  base.html  config.html  dashboard.html  documents.html  help.html  index.html  (+5 more)
src/miachat/core/: __init__.py  config.py  conversation.py  memory.py  persona.py  personality.py
src/miachat/database/: config.py  init_data.py  init_db.py  models.py
src/miachat/llm/: base.py
src/miachat/persona/: loader.py  npc.py  serializer.py
src/miachat/personality/: base.py  conflict.py  evolution.py  loader.py  reference.py  schema.py
src/miachat/validation/: personality.xsd  schema.py
src/miachat/web/: app.py  auth.py  models.py  run.py  utils.py
static/: style.css
static/css/: style.css
static/js/: chat-manager.js  chat.js  config.js  documents.js  models.js  settings.js
templates/: chat.html  index.html
test_sample_data/: create_test_documents.py
test_sample_data/documents/: business_plan.txt  company_policies.txt  technical_documentation.md
tests/: test_cli.py  test_documents.py  test_reference.py  test_setup_wizard.py  test_validation.py
tests/models/: test_models.py
tests/routes/: test_main_routes.py
tests/unit/: test_context_services.py  test_enhanced_context_service.py  test_memory.py  test_memory_service.py  test_personality.py  test_personality_api.py  test_personality_framework.py  test_serializer.py  test_sidebar_services.py  test_tracking_service.py
(+53 files in other folders)
